post-css updated

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@babel/plugin-syntax-jsx": "^7.12.13",
 		"@babel/preset-env": "^7.7.7",
 		"@babel/preset-react": "^7.8.3",
+		"@lodder/grunt-postcss": "^3.0.1",
 		"@wordpress/eslint-plugin": "^8.0.2",
 		"@wordpress/stylelint-config": "^19.0.1",
 		"babel-loader": "^8.2.2",
@@ -37,7 +38,6 @@
 		"grunt-contrib-cssmin": "^3.0.0",
 		"grunt-contrib-watch": "^1.1.0",
 		"grunt-eslint": "^23.0.0",
-		"grunt-postcss": "^0.9.0",
 		"grunt-sass": "^3.1.0",
 		"grunt-stylelint": "^0.16.0",
 		"grunt-terser": "^2.0.0",
@@ -51,9 +51,7 @@
 		"style-loader": "^2.0.0",
 		"stylelint": "^13.9.0",
 		"terser": "^5.7.0",
-		"webpack": "^5.19.0",
-		"@wordpress/scripts": "^17.1.0",
-		"immer": "^9.0.5"
+		"webpack": "^5.19.0"
 	},
 	"browserslist": [
 		"last 2 version",
